加大编译时候使用的内存空间